[package]

name = "gcollections"
version = "1.4.0"
authors = [ "Pierre Talbot <ptalbot@hyc.io>" ]

description = "Generic traits over Rust collections library."
documentation = "https://docs.rs/gcollections/1.4.0/gcollections/"
repository = "https://github.com/ptal/gcollections"
readme = "README.md"
keywords = ["data-structure", "containers", "generic"]
license = "MIT/Apache-2.0"

[lib]

name = "gcollections"
path = "src/libgcollections/lib.rs"

[dependencies]

num = "^0.1.29"
bit-set = "^0.2.0"
trilean = "^1.0.1"

[features]
nightly = []
