[package]

name = "gcollections"
version = "1.4.0"
authors = [ "Pierre Talbot <ptalbot@hyc.io>" ]

description = "Generic traits over Rust collections library."
documentation = "https://docs.rs/gcollections/1.4.0/gcollections/"
repository = "https://github.com/ptal/gcollections"
readme = "README.md"
keywords = ["data-structure", "containers", "generic"]
license = "MIT/Apache-2.0"

[lib]

name = "gcollections"
path = "src/libgcollections/lib.rs"

[dependencies]

num-integer = "0.1.44"
num-traits = "0.2.14"
bit-set = "0.5.0"
trilean = "1.1.0"

[features]
nightly = []
